# blackjack_trainer

./: .gitignore  .pre-commit-config.yaml  README.md  log_config.yaml  pyproject.toml
.github/workflows/: python-package.yml
basic_strategy/: __init__.py  __main__.py  card_eval.py  hand.py  mode_selector.py
db/: README.MD
src/: __init__.py  __main__.py  setup_logging.py
src/app/: __init__.py  __main__.py  app.py  custom_html.py  game_callbacks.py  settings_callbacks.py  ui_callbacks.py
src/app/assets/: style.css
src/app/pages/: dashboard.py  game.py  settings.py
src/basic_strategy/: __init__.py  __main__.py  card_eval.py  hand.py  mode_selector.py
src/stats/: __init__.py  create_plots.py
tests/: fixtures.py  test_card_eval.py  test_hand.py  test_mode_selector.py
tests/app/: test_game_callbacks.py  test_ui_callbacks.py
tests/basic_strategy/: test_card_eval.py  test_hand.py  test_mode_selector.py
